remove FixMindelo header, override title instead
The staging banner didn't fit, and .wrapper{position:relative} was breaking things :-(
Easier to keep it simple, drop the header and just set the title in the Cobrand module instead.

--- a/web/cobrands/fixmindelo/base.scss
+++ b/web/cobrands/fixmindelo/base.scss
@@ -28,19 +28,6 @@ $image-sprite: 'images/sprite.png';
   background: url('images/sprite.png') -8px -915px no-repeat;
 }
 
-#staging-banner {
-  background: #dd3333;
-  color: #fff;
-  padding: 0.2em;
-  margin:0;
-  text-align:center;
-  font-size:80%;
-}
-
-.wrapper {
-  position: relative; // to make the staging-banner not affect top/left positioning of logo
-}
-
 #footer-help ul li {
   padding-right: 3em;
   a {
